bg gap fix

--- a/src/styles/common/hero.scss
+++ b/src/styles/common/hero.scss
@@ -8,7 +8,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      height: 100vh;
+      height: 110vh;
       width: 100%;
       z-index: -1;
 
